change morga to dependency

--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "jest": "^27.0.4",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "standard": "^16.0.3"
   },
